refactor: fix "@Deprecated" replace newInstance() with getDeclaredConstructor().newInstance()